feat: Data Seeding, Password Reset, and UI/UX Enhancements
Bu commit, Publib projesinin MVP aşamasında kalan kritik geliştirmeleri tamamlar. Kapsamlı bir veri yükleme (seeding) mekanizması eklenerek test ortamı zenginleştirilmiş, şifre sıfırlama akışı güvenli ve işlevsel hale getirilmiş, kullanıcı arayüzü ve deneyimi önemli ölçüde iyileştirilmiştir.\n\nTemel Değişiklikler ve Geliştirmeler:\n\n- **Veri Yükleme (Data Seeding) ve Simülasyon:**\n    - ackend/dev/generate-users-simple.js script'i oluşturularak 100 adet sentetik kullanıcı verisi üretildi.\n    - ackend/dev/fetch-real-data.js script'i geliştirilerek TMDB ve Google Books API'lerinden gerçek film ve kitap verileri çekimi sağlandı.\n    - ackend/dev/import-dev-data.js script'i tamamen yeniden yazılarak şu özellikler eklendi:\n        - Akıllı Temizleme: User, List, Review, Follow, Activity verilerini silerken, Book ve Movie koleksiyonlarını korur.\n        - Index Yönetimi: userList koleksiyonundaki user_1_name_1 şeklindeki eski ve çakışmaya neden olan unique index, user_1_name_1_type_1 olarak güncellendi ve script başlangıcında eski index'in (user_1_name_1) güvenli bir şekilde silinmesi sağlandı.\n        - Kapsamlı Kullanıcı Etkileşim Simülasyonu: Kullanıcılar arasında takip, listeleme, puanlama ve yorumlama etkileşimleri otomatik olarak oluşturuldu.\n- **Şifre Sıfırlama Akışı (Real SMTP & Frontend):**\n    - ackend/src/utils/email.js güncellenerek HTML desteği eklendi ve Brevo (Sendinblue) gibi gerçek SMTP servisleriyle uyumlu hale getirildi.\n    - rontend/src/pages/auth/ForgotPasswordPage.jsx ve rontend/src/pages/auth/ResetPasswordPage.jsx sayfaları oluşturuldu.\n    - App.jsx içinde bu sayfalar için rotalar eklendi.\n    - uthService.js içinde şifre sıfırlama linki için config.FRONTEND_URL kullanımıyla merkezi konfigürasyona geçildi.\n- **UI/UX İyileştirmeleri:**\n    - **GuestRoute Bileşeni:** Giriş yapmış kullanıcıların Login ve Register sayfalarına erişimi engellendi.\n    - **Reviews (Metin İ

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix",
     "import-data": "node dev/import-dev-data.js --import",
-    "delete-data": "node dev/import-dev-data.js --delete"
+    "delete-data": "node dev/import-dev-data.js --delete",
+    "seed:fetch-movies": "node dev/fetch-real-data.js --type=movie",
+    "seed:fetch-books": "node dev/fetch-real-data.js --type=book"
   },
   "dependencies": {
     "axios": "^1.13.2",
